# Ostico

./: Cargo.toml
.cargo/: config
src/: interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/interrupts/: idt.rs  mod.rs
