[package]
name = "os-tico"
version = "0.1.0"
authors = ["joxer <diego.luca.candido@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.3"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]